[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameDVDCardtridge/ChangeDVDv3/Shared/bootBanner/RowCellA.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/ChangeDVDv3/ChangeDVDv3.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/ChangeDVDv3/bootThis.gd" type="Script" id=3]
[ext_resource path="res://GameDVDCardtridge/ParlorClassic/Sprites/DefaultBackground_copy.png" type="Texture" id=4]

[node name="DVDboot" type="Node"]
script = ExtResource( 3 )
bootTheDVD = ExtResource( 2 )

[node name="Splash" type="Node" parent="."]

[node name="SplashMan" type="CanvasLayer" parent="Splash"]
layer = 100

[node name="SplashControl" type="Control" parent="Splash/SplashMan"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColumnStack" type="VBoxContainer" parent="Splash/SplashMan/SplashControl"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RowCellA" parent="Splash/SplashMan/SplashControl/ColumnStack" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 440.0
margin_right = 1920.0
margin_bottom = 640.0

[node name="BekgronMan" type="CanvasLayer" parent="Splash"]
layer = 99

[node name="BekgronControl" type="Control" parent="Splash/BekgronMan"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Splash/BekgronMan/BekgronControl"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="Tween" type="Tween" parent="Splash/BekgronMan/BekgronControl"]

[node name="Tray" type="Node" parent="."]

[node name="DelayTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
